--- a/RabbitMqTestNotifications.Server/RabbitMqTestNotifications.Server.csproj
+++ b/RabbitMqTestNotifications.Server/RabbitMqTestNotifications.Server.csproj
@@ -4,16 +4,15 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{1CC10E94-432F-4E42-AE0F-1C1C57F9C1E9}</ProjectGuid>
+        <ProjectGuid>{9FFF16B7-C390-402E-B53C-68D990BA4EBD}</ProjectGuid>
         <OutputType>WinExe</OutputType>
-        <RootNamespace>RabbitMqTestNotifications.Client</RootNamespace>
-        <AssemblyName>RabbitMqTestNotifications.Client</AssemblyName>
+        <RootNamespace>RabbitMqTestNotifications.Server</RootNamespace>
+        <AssemblyName>RabbitMqTestNotifications.Server</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
         <WarningLevel>4</WarningLevel>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
