--- a/RabbitMqTestNotifications.Client/RabbitMqTestNotifications.Client.csproj
+++ b/RabbitMqTestNotifications.Client/RabbitMqTestNotifications.Client.csproj
@@ -133,6 +133,9 @@
         <Reference Include="Splat, Version=14.4.0.0, Culture=neutral, processorArchitecture=MSIL">
           <HintPath>..\packages\Splat.14.4.1\lib\netstandard2.0\Splat.dll</HintPath>
         </Reference>
+        <Reference Include="Splat.Microsoft.Extensions.DependencyInjection, Version=14.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\Splat.Microsoft.Extensions.DependencyInjection.14.4.1\lib\net462\Splat.Microsoft.Extensions.DependencyInjection.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
           <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
