--- a/RabbitMqTestNotifications.Server/packages.config
+++ b/RabbitMqTestNotifications.Server/packages.config
@@ -32,6 +32,7 @@
   <package id="ReactiveUI.Events.WPF" version="15.1.1" targetFramework="net48" />
   <package id="ReactiveUI.WPF" version="18.3.1" targetFramework="net48" />
   <package id="Splat" version="14.4.1" targetFramework="net48" />
+  <package id="Splat.Microsoft.Extensions.DependencyInjection" version="14.4.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
