--- a/RabbitMqTestNotifications.Server/RabbitMqTestNotifications.Server.csproj
+++ b/RabbitMqTestNotifications.Server/RabbitMqTestNotifications.Server.csproj
@@ -13,6 +13,7 @@
         <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
         <WarningLevel>4</WarningLevel>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -208,11 +209,19 @@
             <DependentUpon>App.xaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
+        <Compile Include="CustomResources\MessageTemplateSelector.cs" />
         <Compile Include="Repositories\AppBootstrapper.cs" />
+        <Compile Include="UserControls\MenuUserControl.xaml.cs">
+          <DependentUpon>MenuUserControl.xaml</DependentUpon>
+        </Compile>
         <Compile Include="ViewModels\MainWindowViewModel.cs" />
+        <Compile Include="ViewModels\MessageViewModel.cs" />
         <Compile Include="Views\MainWindowView.xaml.cs">
           <DependentUpon>MainWindowView.xaml</DependentUpon>
           <SubType>Code</SubType>
+        </Compile>
+        <Compile Include="Views\MessageView.xaml.cs">
+          <DependentUpon>MessageView.xaml</DependentUpon>
         </Compile>
     </ItemGroup>
     <ItemGroup>
@@ -234,13 +243,21 @@
         <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="Models" />
-    </ItemGroup>
-    <ItemGroup>
+      <Page Include="UserControls\MenuUserControl.xaml" />
       <Page Include="Views\MainWindowView.xaml">
         <Generator>MSBuild:Compile</Generator>
         <SubType>Designer</SubType>
       </Page>
+      <Page Include="Views\MessageView.xaml" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\RabbitMqTestNotifications.Core\RabbitMqTestNotifications.Core.csproj">
+        <Project>{de810c85-2668-4042-8280-45ddb27cf229}</Project>
+        <Name>RabbitMqTestNotifications.Core</Name>
+      </ProjectReference>
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Models" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets" Condition="Exists('..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets')" />
