--- a/RabbitMqTestNotifications.Server/packages.config
+++ b/RabbitMqTestNotifications.Server/packages.config
@@ -27,7 +27,9 @@
   <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Pharmacist.Common" version="2.0.8" targetFramework="net48" />
+  <package id="RabbitMQ.Client" version="6.4.0" targetFramework="net48" />
   <package id="ReactiveUI" version="18.3.1" targetFramework="net48" />
   <package id="ReactiveUI.Events.WPF" version="15.1.1" targetFramework="net48" />
   <package id="ReactiveUI.WPF" version="18.3.1" targetFramework="net48" />
@@ -47,6 +49,7 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Channels" version="4.7.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
